Improve scripts for ProtoBuf input maker
Processing is done in parallel

--- a/maker/test/condor.cfg
+++ b/maker/test/condor.cfg
@@ -6,7 +6,9 @@ WhenToTransferOutput = ON_EXIT
 Output = cout.log
 Error = cerr.log
 Log = clog.log
+initialdir = job.$(Process)
+transfer_input_files = input.txt,cmssw_cfg.py
 notify_user = 
 Executable = PWD/run.sh
 arguments =
-queue
+queue JOBS
