Add cmsRun arguments to the process.sh

--- a/maker/test/condor.cfg
+++ b/maker/test/condor.cfg
@@ -10,5 +10,5 @@ initialdir = job.$(Process)
 transfer_input_files = input.txt,cmssw_cfg.py
 notify_user = 
 Executable = PWD/run.sh
-arguments =
+arguments = ARGS
 queue JOBS
