Add AOD to PAT configs and run scripts

--- a/maker/test/condor.cfg
+++ b/maker/test/condor.cfg
@@ -7,8 +7,8 @@ Output = cout.log
 Error = cerr.log
 Log = clog.log
 initialdir = job.$(Process)
-transfer_input_files = input.txt,cmssw_cfg.py
+transfer_input_files = input.txt,cmssw_cfg.py,proxy
 notify_user = 
 Executable = PWD/run.sh
-arguments = ARGS
+arguments = $(Cluster) $(Process) ARGS
 queue JOBS
