Fix tape crab config

--- a/maker/test/crab_mc_tape.cfg
+++ b/maker/test/crab_mc_tape.cfg
@@ -10,7 +10,7 @@ pycfg_params = ARGS
 return_data = 0
 copy_data = 1
 storage_element = cmssrm.fnal.gov
-storage_path = /srm/managerv2?SFN=
+storage_path = /srm/managerv2?SFN=/11
 user_remote_dir = store/user/lpctlbsm
 publish_data = 1
 publish_data_name = FOLDER
