Add JEC to InputMaker

--- a/maker/test/condor.cfg
+++ b/maker/test/condor.cfg
@@ -7,7 +7,7 @@ Output = cout.log
 Error = cerr.log
 Log = clog.log
 initialdir = job.$(Process)
-transfer_input_files = input.txt,cmssw_cfg.py,proxy
+transfer_input_files = input.txt,cmssw_cfg.py,proxy,L1FastJet.txt,L2Relative.txt,L3Absolute.txt
 notify_user = 
 Executable = PWD/run.sh
 arguments = $(Cluster) $(Process) ARGS
