Fix user remote dir

--- a/maker/test/crab_data_tape.cfg
+++ b/maker/test/crab_data_tape.cfg
@@ -12,9 +12,9 @@ return_data = 0
 copy_data = 1
 storage_element = cmssrm.fnal.gov
 storage_path = /srm/managerv2?SFN=/11
-user_remote_dir = store/user/lpctlbsm
+user_remote_dir = /store/user/lpctlbsm
 publish_data = 1
-publish_data_name = FOLDER
+publish_data_name = tlbsm_v9_Summer11-PU_S4_START42_V11-v1_FOLDER
 dbs_url_for_publication = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 check_user_remote_dir = 0
 
