--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bsm_input"]
 	path = bsm_input
-	url = git@github.com:baites/bsm_input.git
+	url = git://github.com/ksamdev/bsm_input.git
